--- a/missfit/missfit/Base.lproj/Main.storyboard
+++ b/missfit/missfit/Base.lproj/Main.storyboard
@@ -1544,19 +1544,19 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="253" text="课程简介" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="feC-uI-UJH">
-                                                    <rect key="frame" x="36" y="8" width="528" height="21"/>
+                                                    <rect key="frame" x="36" y="8" width="528" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="249" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S3o-s5-mbr">
-                                                    <rect key="frame" x="36" y="38" width="528" height="17"/>
+                                                    <rect key="frame" x="36" y="37.5" width="528" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.60392156862745094" green="0.60392156862745094" blue="0.60392156862745094" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sei-DH-mQ6">
-                                                    <rect key="frame" x="31" y="68" width="538" height="1"/>
+                                                    <rect key="frame" x="31" y="67.5" width="538" height="1"/>
                                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="E90-rs-WHI"/>
@@ -1569,7 +1569,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="适宜人群" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c6g-Rn-SsR">
-                                                    <rect key="frame" x="36" y="75" width="528" height="20"/>
+                                                    <rect key="frame" x="36" y="74.5" width="528" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -1581,7 +1581,7 @@
                                                 <constraint firstItem="c6g-Rn-SsR" firstAttribute="top" secondItem="S3o-s5-mbr" secondAttribute="bottom" constant="20" id="748-vT-onV"/>
                                                 <constraint firstAttribute="trailing" secondItem="jxL-mM-A6g" secondAttribute="trailing" constant="36" id="E8l-1Q-Vby"/>
                                                 <constraint firstItem="jxL-mM-A6g" firstAttribute="leading" secondItem="zdA-oO-H3u" secondAttribute="leading" constant="36" id="G7I-6c-jea"/>
-                                                <constraint firstItem="sei-DH-mQ6" firstAttribute="leading" secondItem="zdA-oO-H3u" secondAttribute="leadingMargin" constant="23" id="OPw-pv-5vN"/>
+                                                <constraint firstItem="sei-DH-mQ6" firstAttribute="leading" secondItem="zdA-oO-H3u" secondAttribute="leading" constant="31" id="OPw-pv-5vN"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="jxL-mM-A6g" secondAttribute="bottom" constant="8" id="Q7J-fV-53c"/>
                                                 <constraint firstItem="S3o-s5-mbr" firstAttribute="top" secondItem="feC-uI-UJH" secondAttribute="bottom" constant="8.5" id="RNW-ww-tp8"/>
                                                 <constraint firstItem="sei-DH-mQ6" firstAttribute="top" secondItem="S3o-s5-mbr" secondAttribute="bottom" constant="13" id="Uk4-33-gX5"/>
@@ -1589,7 +1589,7 @@
                                                 <constraint firstItem="feC-uI-UJH" firstAttribute="top" secondItem="zdA-oO-H3u" secondAttribute="topMargin" id="c66-wI-eUQ"/>
                                                 <constraint firstItem="feC-uI-UJH" firstAttribute="leading" secondItem="zdA-oO-H3u" secondAttribute="leading" constant="36" id="jYe-TU-dRF"/>
                                                 <constraint firstItem="S3o-s5-mbr" firstAttribute="leading" secondItem="zdA-oO-H3u" secondAttribute="leading" constant="36" id="jgI-x5-J4v"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="sei-DH-mQ6" secondAttribute="trailing" constant="23" id="nKm-qP-L9R"/>
+                                                <constraint firstAttribute="trailing" secondItem="sei-DH-mQ6" secondAttribute="trailing" constant="31" id="nKm-qP-L9R"/>
                                                 <constraint firstItem="jxL-mM-A6g" firstAttribute="top" secondItem="c6g-Rn-SsR" secondAttribute="bottom" constant="8.5" id="odW-sK-o22"/>
                                                 <constraint firstAttribute="trailing" secondItem="S3o-s5-mbr" secondAttribute="trailing" constant="36" id="ttp-nb-qNA"/>
                                                 <constraint firstAttribute="trailing" secondItem="c6g-Rn-SsR" secondAttribute="trailing" constant="36" id="ymQ-zS-TQL"/>
@@ -2589,14 +2589,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请填写您的预约信息，我们将尽快与您取得联系，谢谢！" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6oH-EM-FdA">
-                                <rect key="frame" x="16" y="72" width="568" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请填写您的预约信息，我们将尽快与您取得联系，谢谢！（预约上门需单独付费）" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6oH-EM-FdA">
+                                <rect key="frame" x="16" y="72" width="568" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.60392156860000001" green="0.60392156860000001" blue="0.60392156860000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="evJ-7X-ut1">
-                                <rect key="frame" x="16" y="269" width="568" height="40"/>
+                                <rect key="frame" x="16" y="289" width="568" height="40"/>
                                 <color key="backgroundColor" red="0.96862745100000003" green="0.4941176471" blue="0.64313725489999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="GGh-6A-7Qn"/>
@@ -2611,20 +2611,26 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder=" 请输入您的姓名或公司名" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4pw-wB-ab6">
-                                <rect key="frame" x="16" y="143" width="568" height="34"/>
+                                <rect key="frame" x="16" y="163" width="568" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="r5x-ek-40d"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="3F1-wB-YXB" id="7H1-WR-Nyd"/>
+                                </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder=" 请输入您需要上门服务的地址" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a8U-KG-CuZ">
-                                <rect key="frame" x="16" y="185" width="568" height="34"/>
+                                <rect key="frame" x="16" y="205" width="568" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="7Qf-8A-kUd"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="3F1-wB-YXB" id="tWW-6E-AHF"/>
+                                </connections>
                             </textField>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="yUM-SV-pyr">
                                 <rect key="frame" x="0.0" y="438" width="600" height="162"/>
@@ -2643,20 +2649,26 @@
                                 </connections>
                             </datePicker>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder=" 请输入您需要上门服务的时间" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w0N-Yl-E6N">
-                                <rect key="frame" x="16" y="227" width="568" height="34"/>
+                                <rect key="frame" x="16" y="247" width="568" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="hfe-J2-1PL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="3F1-wB-YXB" id="kWL-nq-9lM"/>
+                                </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder=" 请输入您的手机号码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qfD-uv-J4f">
-                                <rect key="frame" x="16" y="101" width="568" height="34"/>
+                                <rect key="frame" x="16" y="121" width="568" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="Za9-K2-xsl"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <connections>
+                                    <outlet property="delegate" destination="3F1-wB-YXB" id="iZv-ex-p5w"/>
+                                </connections>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
